force-app/main/default/objects/Employee_Survey__c/Employee_Survey__c.object-meta.xml
<CustomObject>
    <label>Employee Survey</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Employee Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>