force-app/main/default/objects/Employee_Survey__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>