force-app/main/default/objects/Employee_Survey__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>