force-app/main/default/objects/Employee_Survey__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subtitle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>