force-app/main/default/objects/Employee_Survey__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Employee Surveys</relationshipLabel>
    <relationshipName>Employee_Surveys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>