force-app/main/default/objects/Employee_Survey__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>