force-app/main/default/objects/Employee_Survey__c/validationRules/End_Date_Must_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( End_Date__c )),
 End_Date__c &lt; TODAY(),
 ISCHANGED(End_Date__c)
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date tidak boleh kurang atau sama dengan hari ini</errorMessage>
</ValidationRule>