force-app/main/default/objects/Employee_Survey__c/validationRules/End_Date_Smaller_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Smaller_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &lt;= Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date (Tanggal Selesai ) tidak boleh lebih kecil/sama dari Start Date (Tanggal Mulai)</errorMessage>
</ValidationRule>