force-app/main/default/objects/Employee_Survey__c/validationRules/Start_Date_Must_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Start_Date__c)),
Start_Date__c &lt; TODAY(),
ISCHANGED(Start_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date tidak boleh kurang dari hari ini</errorMessage>
</ValidationRule>