force-app/main/default/objects/Employee_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Subtitle__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>